# edb-key-demo

./: .gitignore  CMakeLists.txt  readme.md
.ccls-cache/@@home@haff@work@oekey@openenclave-sdk-builder@packages@edb-key-demo/: @usr@include@absl@base@attributes.h.blob  @usr@include@absl@base@config.h.blob  @usr@include@absl@base@internal@throw_delegate.h.blob  @usr@include@absl@base@macros.h.blob  @usr@include@absl@base@optimization.h.blob  @usr@include@absl@base@options.h.blob  @usr@include@absl@base@policy_checks.h.blob  @usr@include@absl@base@port.h.blob  @usr@include@absl@strings@string_view.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@bitsperlong.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm-generic@int-ll64.h.blob  @usr@include@asm-generic@ioctl.h.blob  @usr@include@asm-generic@ioctls.h.blob  @usr@include@asm-generic@posix_types.h.blob  @usr@include@asm-generic@types.h.blob  @usr@include@asm@bitsperlong.h.blob  @usr@include@asm@errno.h.blob  @usr@include@asm@ioctl.h.blob  @usr@include@asm@ioctls.h.blob  @usr@include@asm@posix_types.h.blob  @usr@include@asm@posix_types_64.h.blob  @usr@include@asm@types.h.blob  @usr@include@assert.h.blob  @usr@include@bits@atomic_wide_counter.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@confname.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@environments.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@fcntl-linux.h.blob  @usr@include@bits@fcntl.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  (+322 more)
.ccls-cache/@home@haff@work@oekey@openenclave-sdk-builder@packages@edb-key-demo/: common@common.h.blob  enc@enc.cc  enc@enc.cc.blob  enc@misc.h.blob  host@capture.cc  host@capture.cc.blob  host@capture.h  host@capture.h.blob  host@host.cc  host@host.cc.blob  host@host.h.blob  host@main.cc.blob
docs/: edb-demo-guide.md  tbe201-setup.md
enc/: CMakeLists.txt  enc.cc
host/: CMakeLists.txt  capture.cc  capture.h  host.cc  host.h  main.cc
models/: edb_key_demo.tflite
scripts/: edb-provision-key.sh
